// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PortfolioPropertyRow renders at-risk 1`] = `
<div
  className="portfolio-property-row"
>
  <div
    className="portfolio-property-row__image"
    style={
      Object {
        "backgroundImage": "url(\\"https://www.hillsdale.edu/wp-content/uploads/2016/05/Monument-Valley-800x800.jpg\\")",
      }
    }
  />
  <div
    className="portfolio-property-row__title"
  >
    <div
      className="portfolio-property-row__name"
    >
      Tara
    </div>
    <div
      className="portfolio-property-row__address"
    >
      San Antonio, TX 78209
    </div>
  </div>
  <div
    className="portfolio-property-row__info"
  >
    <div
      className="property-status portfolio-property-row__health property-status--at-risk"
    >
      AT RISK
    </div>
    <a
      className="portfolio-property-row__link"
      href="/"
      onClick={[Function]}
      style={
        Object {
          "color": "inherit",
          "textDecoration": "inherit",
        }
      }
    >
      View Property
    </a>
  </div>
  <div
    className="portfolio-property-row__kpis"
  >
    <div
      className="portfolio-property-row__kpi"
    >
      <div
        className="portfolio-property-row__value"
      >
        90%
      </div>
      <div
        className="portfolio-property-row__target"
      >
        Target: 90%
      </div>
    </div>
    <div
      className="portfolio-property-row__kpi"
    >
      <div
        className="portfolio-property-row__value"
      >
        80%
      </div>
      <div
        className="portfolio-property-row__target"
      >
        Target: 80%
      </div>
    </div>
    <div
      className="portfolio-property-row__kpi"
    >
      <div
        className="portfolio-property-row__value"
      >
        10%
      </div>
      <div
        className="portfolio-property-row__target"
      >
        Target: 10%
      </div>
    </div>
    <div
      className="portfolio-property-row__kpi"
    >
      <div
        className="portfolio-property-row__value"
      >
        50%
      </div>
      <div
        className="portfolio-property-row__target"
      >
        Target: 50%
      </div>
    </div>
  </div>
</div>
`;

exports[`PortfolioPropertyRow renders off-track 1`] = `
<div
  className="portfolio-property-row"
>
  <div
    className="portfolio-property-row__image"
    style={
      Object {
        "backgroundImage": "url(\\"https://www.hillsdale.edu/wp-content/uploads/2016/05/Monument-Valley-800x800.jpg\\")",
      }
    }
  />
  <div
    className="portfolio-property-row__title"
  >
    <div
      className="portfolio-property-row__name"
    >
      Tara
    </div>
    <div
      className="portfolio-property-row__address"
    >
      San Antonio, TX 78209
    </div>
  </div>
  <div
    className="portfolio-property-row__info"
  >
    <div
      className="property-status portfolio-property-row__health property-status--off-track"
    >
      OFF TRACK
    </div>
    <a
      className="portfolio-property-row__link"
      href="/"
      onClick={[Function]}
      style={
        Object {
          "color": "inherit",
          "textDecoration": "inherit",
        }
      }
    >
      View Property
    </a>
  </div>
  <div
    className="portfolio-property-row__kpis"
  >
    <div
      className="portfolio-property-row__kpi"
    >
      <div
        className="portfolio-property-row__value"
      >
        90%
      </div>
      <div
        className="portfolio-property-row__target"
      >
        Target: 90%
      </div>
    </div>
    <div
      className="portfolio-property-row__kpi"
    >
      <div
        className="portfolio-property-row__value"
      >
        80%
      </div>
      <div
        className="portfolio-property-row__target"
      >
        Target: 80%
      </div>
    </div>
    <div
      className="portfolio-property-row__kpi"
    >
      <div
        className="portfolio-property-row__value"
      >
        10%
      </div>
      <div
        className="portfolio-property-row__target"
      >
        Target: 10%
      </div>
    </div>
    <div
      className="portfolio-property-row__kpi"
    >
      <div
        className="portfolio-property-row__value"
      >
        50%
      </div>
      <div
        className="portfolio-property-row__target"
      >
        Target: 50%
      </div>
    </div>
  </div>
</div>
`;

exports[`PortfolioPropertyRow renders on-track 1`] = `
<div
  className="portfolio-property-row"
>
  <div
    className="portfolio-property-row__image"
    style={
      Object {
        "backgroundImage": "url(\\"https://www.hillsdale.edu/wp-content/uploads/2016/05/Monument-Valley-800x800.jpg\\")",
      }
    }
  />
  <div
    className="portfolio-property-row__title"
  >
    <div
      className="portfolio-property-row__name"
    >
      Tara
    </div>
    <div
      className="portfolio-property-row__address"
    >
      San Antonio, TX 78209
    </div>
  </div>
  <div
    className="portfolio-property-row__info"
  >
    <div
      className="property-status portfolio-property-row__health property-status--on-track"
    >
      ON TRACK
    </div>
    <a
      className="portfolio-property-row__link"
      href="/"
      onClick={[Function]}
      style={
        Object {
          "color": "inherit",
          "textDecoration": "inherit",
        }
      }
    >
      View Property
    </a>
  </div>
  <div
    className="portfolio-property-row__kpis"
  >
    <div
      className="portfolio-property-row__kpi"
    >
      <div
        className="portfolio-property-row__value"
      >
        90%
      </div>
      <div
        className="portfolio-property-row__target"
      >
        Target: 90%
      </div>
    </div>
    <div
      className="portfolio-property-row__kpi"
    >
      <div
        className="portfolio-property-row__value"
      >
        80%
      </div>
      <div
        className="portfolio-property-row__target"
      >
        Target: 80%
      </div>
    </div>
    <div
      className="portfolio-property-row__kpi"
    >
      <div
        className="portfolio-property-row__value"
      >
        10%
      </div>
      <div
        className="portfolio-property-row__target"
      >
        Target: 10%
      </div>
    </div>
    <div
      className="portfolio-property-row__kpi"
    >
      <div
        className="portfolio-property-row__value"
      >
        50%
      </div>
      <div
        className="portfolio-property-row__target"
      >
        Target: 50%
      </div>
    </div>
  </div>
</div>
`;

exports[`PortfolioPropertyRow renders withoutKPIs 1`] = `
<div
  className="portfolio-property-row portfolio-property-row--with-alarm"
>
  <div
    className="portfolio-property-row__alarm"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <svg
      aria-hidden="true"
      className="portfolio-property-row__alarm-icon"
      color="inherit"
      fill="none"
      focusable="false"
      height="1em"
      role="presentation"
      viewBox="0 0 20 20"
      width="1em"
    >
      <circle
        cx="10"
        cy="10"
        r="9.5"
        stroke="#F3F65C"
      />
      <path
        d="M8.5 4.40002L8.96644 11.8667H11.0263L11.5536 4.40002H8.5ZM10.0037 13.2667C9.23695 13.2667 8.75863 13.7118 8.75863 14.437C8.75863 15.1557 9.23742 15.6 10.0037 15.6C10.7699 15.6 11.2424 15.1557 11.2424 14.437C11.2424 13.7118 10.7704 13.2667 10.0037 13.2667Z"
        fill="#F3F65C"
      />
    </svg>
  </div>
  <div
    className="portfolio-property-row__image"
    style={
      Object {
        "backgroundImage": "url(\\"https://www.hillsdale.edu/wp-content/uploads/2016/05/Monument-Valley-800x800.jpg\\")",
      }
    }
  />
  <div
    className="portfolio-property-row__title"
  >
    <div
      className="portfolio-property-row__name"
    >
      Tara
    </div>
    <div
      className="portfolio-property-row__address"
    >
      San Antonio, TX 78209
    </div>
  </div>
  <div
    className="portfolio-property-row__info"
  >
    <div
      className="property-status portfolio-property-row__health property-status--on-track"
    >
      ON TRACK
    </div>
    <a
      className="portfolio-property-row__link"
      href="/"
      onClick={[Function]}
      style={
        Object {
          "color": "inherit",
          "textDecoration": "inherit",
        }
      }
    >
      View Property
    </a>
  </div>
  <div
    className="portfolio-property-row__kpis"
  >
    <div
      className="portfolio-property-row__kpi"
    >
      <div
        className="portfolio-property-row__value"
      >
        
      </div>
      <div
        className="portfolio-property-row__target"
      >
        
      </div>
    </div>
    <div
      className="portfolio-property-row__kpi"
    >
      <div
        className="portfolio-property-row__value"
      >
        
      </div>
      <div
        className="portfolio-property-row__target"
      >
        
      </div>
    </div>
    <div
      className="portfolio-property-row__kpi"
    >
      <div
        className="portfolio-property-row__value"
      >
        
      </div>
      <div
        className="portfolio-property-row__target"
      >
        
      </div>
    </div>
    <div
      className="portfolio-property-row__kpi"
    >
      <div
        className="portfolio-property-row__value"
      >
        
      </div>
      <div
        className="portfolio-property-row__target"
      >
        
      </div>
    </div>
  </div>
</div>
`;
